# kfnotepad

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_NOTES.md  README.md  SECURITY.md  deny.toml
.cargo/: audit.toml
.codex/: config.toml
.github/workflows/: ci.yml  dependency-policy.yml  release.yml
benches/: core_text.rs
docs/: 06-SECURITY.md  13-OPERATIONS.md  16-CLI-CONTRACT.md  17-GUI-CONTRACT.md  README.md  performance.md
scripts/: advisory-exceptions.sh  bootstrap-dev.sh  build.sh  check.sh  doctor.sh  feature-check.sh  gui-visual-smoke.sh  install-pinned-appimage-tools.sh  install-rust-toolchain.sh  lint.sh  package-macos.sh  package-windows.ps1  package.sh  run.sh  security-check.sh  security-tool-versions.sh  test.sh
src/: lib.rs  main.rs
src/core/: errors.rs  file_adapter.rs  mod.rs  paths.rs  search.rs  settings.rs  syntax.rs  tests.rs  text_buffer.rs  text_document.rs  workspace.rs
src/core/errors/: managed_notes.rs  open.rs  save.rs
src/core/file_adapter/: cli_help.rs  managed_notes.rs  read_snapshot.rs  save_impl.rs  summary_open_save.rs  trash_atomic_helpers.rs  types.rs
src/core/file_adapter/cli_help/: args.rs  short_help.rs  tui_help.rs
src/core/file_adapter/managed_notes/: delete.rs  open_list.rs  paths.rs
src/core/paths/: current.rs  helpers.rs  platform.rs  resolve.rs  tests.rs
src/core/search/: case_insensitive.rs  grapheme_ranges.rs  mode.rs  navigation.rs  results.rs
src/core/settings/: editor_config.rs  gui_layout.rs  io_helpers.rs  parse_helpers.rs  paths.rs  types.rs  workspace_projects.rs
src/core/syntax/: highlight.rs  incremental.rs  plain.rs  selection.rs  types.rs
src/core/tests/: cli_summary.rs  history_model.rs  search.rs  settings_layout_projects.rs  sidebar_gui_models.rs  text_buffer_editing.rs  undo_resource_limits.rs  workspace_commands.rs
src/core/text_buffer/: constructors.rs  cursor.rs  editing.rs  grapheme_columns.rs  history_queue.rs  instrumentation.rs  search_helpers.rs  snapshot_history.rs  types.rs  undo_search.rs
src/core/text_document/: cursor_edit.rs  search.rs  types.rs
src/core/workspace/: editor_types.rs  editor_workspace.rs  file_sidebar.rs  gui_file_browser.rs  gui_types.rs  gui_workspace.rs  path_helpers.rs
src/gui/: app.rs  app_state.rs  dialogs.rs  editor_adapter.rs  external_watcher.rs  file_browser.rs  layout.rs  mod.rs  preferences.rs  state.rs  tests.rs  theme.rs  update.rs  view.rs  workspace_tiles.rs
src/gui/app_state/: help_text.rs  icons.rs  labels.rs  layout_constants.rs  messages.rs  types.rs
src/gui/dialogs/: availability.rs  open.rs  path_prompt.rs  save_as.rs
src/gui/editor_adapter/: adapter.rs  input_method.rs  scrollbar_selection.rs  types.rs  viewport.rs
src/gui/file_browser/: create.rs  delete.rs  delete_guards.rs  load_async.rs  navigation_refresh.rs  root.rs  selection.rs  test_actions.rs  tree_selection.rs
src/gui/layout/: app_chrome.rs  panes.rs  paths_and_external.rs  serialization.rs  workspace_restore.rs
src/gui/preferences/: menu_persistence.rs  settings.rs  workspaces_panel.rs
src/gui/state/: constructors.rs  launch.rs  types.rs
src/gui/tests/: actions_preferences_icons.rs  editor_renderer.rs  launch_and_file_io.rs  managed_external_browser.rs  panes_search_menu_layout.rs  workspaces.rs
src/gui/theme/: editor_helpers.rs  file_tree.rs  palette.rs  search_menu.rs  test_descriptors.rs  widgets.rs
src/gui/update/: dispatch.rs  subscription.rs
src/gui/view/: left_panel.rs  panes.rs  shell.rs  top_panels.rs
src/gui/workspace_tiles/: documents_and_saves.rs  editor_interaction.rs  external_and_syntax.rs  panes_search_layout.rs  search_helpers.rs
src/tui/: app.rs  input.rs  menu.rs  mod.rs  render.rs  sidebar.rs  terminal_session.rs  theme.rs
src/tui/app/: commands.rs  event_loop.rs  exports.rs  helpers.rs  imports.rs  run.rs  tests.rs
src/tui/input/: editor_commands.rs  events.rs  runtime.rs  sidebar.rs  workspaces.rs
src/tui/menu/: command_palette.rs  commands.rs  group_items.rs  group_navigation.rs  types.rs  workspace_manager.rs
src/tui/render/: chrome.rs  editor_lines.rs  entry.rs  status_text.rs  syntax_colors.rs  tests.rs  viewport_wrapping.rs
src/tui/sidebar/: colors.rs  command_palette_overlay.rs  file_sidebar.rs  workspace_overlay.rs
src/tui/terminal_session/: backend.rs  capabilities.rs  session.rs  tests.rs
src/tui/theme/: palettes.rs  types.rs
tests/: cli_smoke.rs  file_adapter.rs  gui_smoke.rs  managed_notes.rs  save_adapter.rs
(+457 files in other folders)
