[package]
name = "kfnotepad"
version = "0.1.0"
edition = "2021"
description = "Terminal notepad for local UTF-8 text files."
license = "AGPL-3.0-or-later"
publish = false

[features]
default = ["tui", "syntax"]
tui = ["dep:crossterm", "dep:unicode-width", "dep:syntect"]
gui = [
    "dep:iced",
    "dep:iced_aw",
    "dep:iced-swdir-tree",
    "dep:iced_fonts",
    "dep:nerd-font-symbols",
    "dep:rfd",
    "dep:syntect",
    "dep:unicode-width",
]

syntax = [
    "dep:syntect",
]

[dependencies]
dirs = "6.0.0"
crossterm = { version = "0.29.0", default-features = false, features = ["events", "bracketed-paste", "windows"], optional = true }
iced = { version = "0.14.0", features = ["advanced", "highlighter", "tokio"], optional = true }
iced_aw = { version = "0.14.1", default-features = false, features = ["menu", "drop_down"], optional = true }
iced_fonts = { version = "0.3.0", default-features = false, features = ["nerd"], optional = true }
iced-swdir-tree = { version = "0.9.1", default-features = false, optional = true }
nerd-font-symbols = { version = "0.3.0", optional = true }
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal", "wayland"], optional = true }
syntect = { version = "5.3.0", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"], optional = true }
unicode-width = { version = "0.2.2", optional = true }
trash = "5.2.6"
unicode-segmentation = "1.13.3"

[[bin]]
name = "kfnotepad-gui"
path = "src/bin/kfnotepad-gui.rs"
required-features = ["gui"]

[[bin]]
name = "kfnotepad"
path = "src/main.rs"
required-features = ["tui"]

[[test]]
name = "gui_smoke"
path = "tests/gui_smoke.rs"
required-features = ["gui"]
