[package]
name = "kfnotepad"
version = "0.1.1"
edition = "2021"
description = "Local UTF-8 text editor with terminal and desktop front ends."
license = "AGPL-3.0-or-later"
publish = false

[features]
default = ["tui", "syntax"]
tui = ["dep:crossterm", "dep:unicode-width"]
gui = [
    "dep:iced",
    "dep:iced_aw",
    "dep:iced_fonts",
    "dep:nerd-font-symbols",
    "dep:notify-debouncer-mini",
    "dep:rfd",
    "dep:tokio",
    "dep:unicode-width",
]

syntax = [
    "dep:syntect",
    "iced?/highlighter",
]

[dependencies]
dirs = "6.0.0"
crossterm = { version = "0.29.0", default-features = false, features = ["events", "bracketed-paste", "windows"], optional = true }
iced = { version = "0.14.0", features = ["advanced", "tokio"], optional = true }
iced_aw = { version = "0.14.1", default-features = false, features = ["menu", "drop_down"], optional = true }
iced_fonts = { version = "0.3.0", default-features = false, features = ["nerd"], optional = true }
nerd-font-symbols = { version = "0.3.0", optional = true }
notify-debouncer-mini = { version = "0.7.0", optional = true }
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal", "wayland"], optional = true }
syntect = { version = "5.3.0", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"], optional = true }
tokio = { version = "1.49.0", default-features = false, features = ["rt"], optional = true }
unicode-width = { version = "0.2.2", optional = true }
trash = "5.2.6"
unicode-segmentation = "1.13.3"

[dev-dependencies]
divan = "=0.1.21"

[[bin]]
name = "kfnotepad-gui"
path = "src/bin/kfnotepad-gui.rs"
required-features = ["gui"]

[[bin]]
name = "kfnotepad"
path = "src/main.rs"
required-features = ["tui"]

[[test]]
name = "gui_smoke"
path = "tests/gui_smoke.rs"
required-features = ["gui"]

[[bench]]
name = "core_text"
path = "benches/core_text.rs"
harness = false
